Upload.js Working

--- a/src/upload.html
+++ b/src/upload.html
@@ -27,10 +27,13 @@
                         <label for="mediaFile">Select Media File (Image/Video):</label>
                         <input type="file" class="form-control-file" id="mediaFile" accept="image/*,video/*">
                     </div>
-                    <button type="submit" class="btn btn-success">Upload</button>
+                        <button id="uploadButton" type="submit" class="btn btn-success">Upload</button>
                 </form>
             </div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+    <script src="upload.js"></script>
 </body>
+
 </html>
