Verify.js Working

--- a/src/verify.html
+++ b/src/verify.html
@@ -27,10 +27,13 @@
                         <label for="verifyFile">Upload Media File to Verify:</label>
                         <input type="file" class="form-control-file" id="verifyFile" accept="image/*,video/*">
                     </div>
-                    <button type="submit" class="btn btn-info">Verify</button>
+                    <button id="verifyButton" type="submit" class="btn btn-success">Verify</button>
+
                 </form>
             </div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+    <script src="verify.js"></script>
 </body>
 </html>
