Display-details-after-upload

--- a/src/verify.html
+++ b/src/verify.html
@@ -30,6 +30,8 @@
                     <button id="verifyButton" type="submit" class="btn btn-success">Verify</button>
 
                 </form>
+                <div id="resultContainer" style="margin-top: 20px;"></div>
+
             </div>
         </div>
     </div>
