Display-details-after-verify

--- a/src/upload.html
+++ b/src/upload.html
@@ -1,4 +1,3 @@
-<!-- Upload Page: upload.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +6,6 @@
     <title>Upload Media</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <!-- Add qrcode.js -->
     <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
 </head>
 <body>
@@ -29,7 +27,7 @@
                         <label for="mediaFile">Select Media File (Image/Video):</label>
                         <input type="file" class="form-control-file" id="mediaFile" accept="image/*,video/*">
                     </div>
-                        <button id="uploadButton" type="submit" class="btn btn-success">Upload</button>
+                    <button id="uploadButton" type="submit" class="btn btn-success">Upload</button>
                 </form>
                 <!-- Placeholder for displaying results -->
                 <div id="resultContainer"></div>
@@ -39,7 +37,7 @@
     <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
     <script src="upload.js"></script>
 </body>
-
+</html>
 
 <!-- Upload Page: upload.html
 <!DOCTYPE html>
