--- a/src/verify.html
+++ b/src/verify.html
@@ -1,4 +1,3 @@
-
 <!-- Verify Page: verify.html -->
 <!DOCTYPE html>
 <html lang="en">
@@ -8,6 +7,7 @@
     <title>Verify Media</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
 </head>
 <body>
     <div class="header">
@@ -24,14 +24,13 @@
                 <h4 class="card-title">Verify Media</h4>
                 <form>
                     <div class="form-group">
-                        <label for="verifyFile">Upload Media File to Verify:</label>
+                        <label for="verifyFile">Select Media File (Image/Video):</label>
                         <input type="file" class="form-control-file" id="verifyFile" accept="image/*,video/*">
                     </div>
                     <button id="verifyButton" type="submit" class="btn btn-success">Verify</button>
-
                 </form>
+                <!-- Placeholder for displaying results -->
                 <div id="resultContainer" style="margin-top: 20px;"></div>
-
             </div>
         </div>
     </div>
